just updating some stuff

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container text-center" id="page">
         <div class="row">
             <h3>این وبسایت یک وب اپلیکیشن تک صفحه ایه</h3>
-            <P>میتونی اطلاعاتی که نوشتم در مورد خودم رو بخونی، تجربه هایی که داشتم رو بدونی <span class="badge bg-secondary">همش تو همین یدونه صفحه!</span></P>
+            <P>کارهای زیادی نمیتونی اینجا انجام بدی ، ولی میتونی یکم درمورد من بیشتر بدونی <span class="badge bg-secondary">همش تو همین یدونه صفحه!</span></P>
             <div class="btn-panel">
                 <a href="#bio"><button type="button" class="btntp btn btn-light">Bio</button></a>
                 <a href="#experiences"><button type="button" class="btntp btn btn-light">تجربه ها</button></a>
