Changed a few texts.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container text-center" id="page">
         <div class="row">
             <h3>این وبسایت یک وب اپلیکیشن تک صفحه ایه</h3>
-            <P>کارهای زیادی نمیتونی اینجا انجام بدی ، ولی میتونی یکم درمورد من بیشتر بدونی <span class="badge bg-secondary">همش تو همین یدونه صفحه!</span></P>
+            <P>کارهای زیادی نمیتونی اینجا انجام بدی ، ولی میتونی یکم بیشتر درمورد من بدونی <span class="badge bg-secondary">همش تو همین یدونه صفحه!</span></P>
             <div class="btn-panel">
                 <a href="#bio"><button type="button" class="btntp btn btn-light">Bio</button></a>
                 <a href="#experiences"><button type="button" class="btntp btn btn-light">تجربه ها</button></a>
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <div class="divider"></div>
+  
     <!-- let's go for the experiences tab -->
     <!-- Wordpress - HTML, CSS, Javascript - Gaming - Music -->
     <div class="container text-center" id="experiences">
@@ -89,7 +89,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <span>Trading</span>
-                <p>ترید کردن خیلی برام جذابه مخصوصا ترید کریپتو و فارکس. با کانسپت های اسمارت مانی و ICT آشنا هستم و هر روز استراتژیم رو بهینه تر میکنم. </p>
+                <p>ترید کردن خیلی برام جذابه مخصوصا ترید کریپتو و فارکس. با کانسپت های اسمارت مانی و ICT آشنا هستم و هر روز استراتژیم رو بهینه تر میکنم. هنوز اول راهم و تجربه زیادی ندارم ولی میتونم بگم برای الان خیلی کار پراسترسی هست و با تمرین و تست بیشتر استرسش خیلی کمتر میشه. </p>
             </div>
             <div class="btn-panel">
                 <a href="#"><button type="button" class="btntp btn btn-light">برگشت به اول</button></a>
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <div class="divider"></div>
+    
 
     <!-- Okay Now we have a social space. link your stuff and make it apealing to click -->
     <div class="container text-center" id="socials">
